protox/tests/snapshots/compiler__double_import_branch_error.snap
---
source: protox/tests/compiler.rs
assertion_line: 91
expression: "check_err(&[(\"existing.proto\", \"\"),\n(\"branch.proto\",\n\"import 'existing.proto';\n        import 'existing.proto';\n        \"),\n(\"root.proto\", \"import 'branch.proto';\n        \"),])"
---
causes: []
filename: branch.proto
labels:
  - label: imported here
    span:
      length: 24
      offset: 33
message: "import 'existing.proto' was listed twice"
related: []
severity: error
